# game

./: .gitignore  app.py  chessEngine.py  exampleapp.py  homework.py  models.py  modules.py  pyproject.toml  requirements.txt
static/: black.js  board.js  board_style.css  login_style.css  start_style.css  style.css  white.js
templates/: base.html  black.html  chess.html  login.html  startGame.html  white.html
