[tool]
[tool.poetry]
name = "myproject"
version = "0.0.2"
description = "description"
authors = ["Supersharas"]
[tool.poetry.dependencies]
flask = "^1.0"
flask-sqlalchemy = "^2.3"
sqlalchemy = "^1.2"
psycopg2-binary = "^2.7"
flask-migrate = "^2.5.3"
flask-moment = "^0.10.0"
flask-wtf = "^0.14.3"
babel = "^2.8.0"
markupsafe = "^1.1.1"
